--- a/action-a/action.yml
+++ b/action-a/action.yml
@@ -1,6 +1,6 @@
 name: "Hello Actions"
 description: "Greet someone"
-author: "kmmorishita@github.com"
+author: "octocat@github.com"
 
 inputs:
   MY_NAME:
